# yolo-object-detector

./: .gitignore  CMakeLists.txt  README.md  build.sh  plot.gp
src/: coco2xml.cpp  compute_anchors.cpp  convert_dataset.cpp  convert_images.cpp  darknet2xml.cpp  demo.cpp  detect.cpp  detector_utils.cpp  detector_utils.h  draw.cpp  draw.h  draw_boxes.cpp  drawing_utils.cpp  drawing_utils.h  evalcoco.cpp  fuse.cpp  kfashion.cpp  loss_yolo.h  metrics.cpp  metrics.h  model.cpp  model.h  model_impl.h  rgpnet.h  sgd_trainer.cpp  sgd_trainer.h  test.cpp  train.cpp  utils.cpp  utils.h  vovnet.h  webcam_window.cpp  webcam_window.h  xml2coco.cpp  xml2darknet.cpp  yolo_logo.cpp  yolo_logo.h  yolor.h  yolov7.h  yolov7_tiny.h
